--- a/src/common/stylus/mixins.styl
+++ b/src/common/stylus/mixins.styl
@@ -42,8 +42,8 @@ top-border-1px($color)
       transform scaleY(.333333)
 
 //根据像素比来使用 2x图 3x图
-// bg-image($url)
-//   background-image: url($url + "@2x.png")
+bg-image($url)
+  background-image: url($url + "@2x.png")
 //   @media (-webkit-min-device-pixel-ratio: 3),(min-device-pixel-ratio: 3)
 //     background-image: url($url + "@3x.png")
 
